--- a/AGT.GalacticArchives.Globalization/StarSystemResource.resx
+++ b/AGT.GalacticArchives.Globalization/StarSystemResource.resx
@@ -124,81 +124,195 @@
     <value>Additional Notes</value>
   </data>
   <data name="AdminNotes" xml:space="preserve">
-    <value>Admin Notes</value>
+    <value>Editor and admin notes on data quality</value>
   </data>
-  <data name="AutoLatestSurvey" xml:space="preserve">
-    <value>Auto Latest Survey</value>
+  <data name="BlackHoleDestination" xml:space="preserve">
+    <value>Black Hole Destination</value>
   </data>
-  <data name="BaseCoord" xml:space="preserve">
-    <value>Base Coord</value>
+  <data name="Buy" xml:space="preserve">
+    <value>e-buy</value>
   </data>
-  <data name="CivilizedSpaceNotes" xml:space="preserve">
-    <value>Civilized Space Notes</value>
+  <data name="CivilizedBy" xml:space="preserve">
+    <value>Civilized?</value>
   </data>
-  <data name="DocSequence" xml:space="preserve">
-    <value>Doc Sequence</value>
+  <data name="ConflictType" xml:space="preserve">
+    <value>Conflict</value>
   </data>
-  <data name="EarliestKnownSurveyorId" xml:space="preserve">
-    <value>Earliest Known Surveyor ID</value>
+  <data name="DataQualityCheck" xml:space="preserve">
+    <value>Data Quality Check</value>
   </data>
-  <data name="EarliestSurveyorWikiUser" xml:space="preserve">
-    <value>Earliest Surveryor WikiUser</value>
+  <data name="DiscoveredBy" xml:space="preserve">
+    <value>Discovered by</value>
   </data>
-  <data name="EarliestSystemDiscovery" xml:space="preserve">
-    <value>Earliest System Discovery (disabled)</value>
+  <data name="DiscoveredLinkOnWiki" xml:space="preserve">
+    <value>Discovered Link on Wiki</value>
+  </data>
+  <data name="DiscoveredNotes" xml:space="preserve">
+    <value>Discovered Notes</value>
+  </data>
+  <data name="DiscoveryDate" xml:space="preserve">
+    <value>Discovery Date</value>
+  </data>
+  <data name="EconomyType" xml:space="preserve">
+    <value>Economy</value>
+  </data>
+  <data name="ExoSuitSClassUpgradeModules" xml:space="preserve">
+    <value>ExoSuit S-Class Upgrade Modules</value>
   </data>
   <data name="ExternalLink1" xml:space="preserve">
     <value>External Link 1</value>
   </data>
+  <data name="ExternalLink2" xml:space="preserve">
+    <value>External Link 2</value>
+  </data>
+  <data name="ExternalLink3" xml:space="preserve">
+    <value>External Link 3</value>
+  </data>
+  <data name="GalacticCoordinates" xml:space="preserve">
+    <value>Galactic Coordinates</value>
+  </data>
+  <data name="GalleryTextNotes" xml:space="preserve">
+    <value>Gallery Text Notes</value>
+  </data>
+  <data name="GameModeType" xml:space="preserve">
+    <value>Mode</value>
+  </data>
   <data name="GameRelease" xml:space="preserve">
-    <value>Game Release</value>
+    <value>Release</value>
   </data>
-  <data name="LatestKnownSurveyorId" xml:space="preserve">
-    <value>Latest Surveyor ID</value>
+  <data name="GlyphCode" xml:space="preserve">
+    <value>Glyph Code</value>
   </data>
-  <data name="LatestSurveyorWikiUser" xml:space="preserve">
-    <value>Latest Surveryor WikiUser</value>
+  <data name="HasCenterAccess" xml:space="preserve">
+    <value>Center Access? (Y/blank)</value>
   </data>
-  <data name="LegacyName" xml:space="preserve">
-    <value>Legacy Name</value>
+  <data name="HasWater" xml:space="preserve">
+    <value>Water (Y/N)</value>
   </data>
-  <data name="LegacyWikilink" xml:space="preserve">
-    <value>Legacy wiki link</value>
+  <data name="Hex2DecSystemId" xml:space="preserve">
+    <value>System ID</value>
+  </data>
+  <data name="IsDissonant" xml:space="preserve">
+    <value>Dissonant?</value>
+  </data>
+  <data name="IsGiantSystem" xml:space="preserve">
+    <value>Giant System, (Y/N)</value>
+  </data>
+  <data name="IsPhantomSystem" xml:space="preserve">
+    <value>Phantom System?</value>
+  </data>
+  <data name="KeySystemIndicator" xml:space="preserve">
+    <value>Key System Indicator</value>
+  </data>
+  <data name="LegacyPCDiscoverersGamerTagName" xml:space="preserve">
+    <value>LEGACY PC Discoverers GamerTag Name</value>
+  </data>
+  <data name="LegacyPCSystemName" xml:space="preserve">
+    <value>LEGACY PC system name</value>
+  </data>
+  <data name="LegacyPSDiscoverersGamerTagName" xml:space="preserve">
+    <value>LEGACY PS Discoverers GamerTag Name</value>
+  </data>
+  <data name="LegacyPSSystemName" xml:space="preserve">
+    <value>LEGACY PS system name</value>
+  </data>
+  <data name="LegacyXboxDiscoverersGamerTagName" xml:space="preserve">
+    <value>LEGACY Xbox Discoverers GamerTag Name</value>
+  </data>
+  <data name="LegacyXboxSystemName" xml:space="preserve">
+    <value>LEGACY Xbox system name</value>
   </data>
   <data name="LightYearsFromCenter" xml:space="preserve">
-    <value>Light Years Estimate</value>
+    <value>LY from center (manual observation)</value>
   </data>
-  <data name="LocationNotes" xml:space="preserve">
-    <value>Location Notes</value>
+  <data name="LightYearsFromCenterAutoEstimate" xml:space="preserve">
+    <value>LY from center (auto estimate)</value>
   </data>
-  <data name="LowestKnownPhantomSystem" xml:space="preserve">
-    <value>Lowest Known Phantom System</value>
+  <data name="LocInfoNotes" xml:space="preserve">
+    <value>Loc Info Notes</value>
+  </data>
+  <data name="MTTextNotes" xml:space="preserve">
+    <value>MT Text Notes</value>
+  </data>
+  <data name="MultiToolSClassUpgradeModules" xml:space="preserve">
+    <value>Multi-Tool S-Class Upgrade Modules</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value>Region Name</value>
+    <value>System Name (Unique entry search key)</value>
   </data>
-  <data name="RegionAge" xml:space="preserve">
-    <value>Region Age</value>
+  <data name="NMSWikiLink" xml:space="preserve">
+    <value>NMS wiki Link</value>
   </data>
-  <data name="SummaryNotes" xml:space="preserve">
-    <value>Summary Notes</value>
+  <data name="NumberOfMoons" xml:space="preserve">
+    <value># of moons</value>
   </data>
-  <data name="VideoLink1" xml:space="preserve">
-    <value>Video Link 1</value>
+  <data name="NumberOfPlanets" xml:space="preserve">
+    <value># of planets</value>
   </data>
-  <data name="WikiLink" xml:space="preserve">
-    <value>NMS Wiki link</value>
+  <data name="OriginalSystemName" xml:space="preserve">
+    <value>Original Sys Name</value>
   </data>
-  <data name="XXdec" xml:space="preserve">
-    <value>XX (dec)</value>
+  <data name="PlanetsTextNotes" xml:space="preserve">
+    <value>Planets Text Notes</value>
   </data>
-  <data name="YY" xml:space="preserve">
-    <value>YY (altitude)</value>
+  <data name="PlatformType" xml:space="preserve">
+    <value>Discovery Platform</value>
   </data>
-  <data name="YYdec" xml:space="preserve">
-    <value>YY (dec)</value>
+  <data name="PortalRepository" xml:space="preserve">
+    <value>Portal Repository</value>
   </data>
-  <data name="ZZdec" xml:space="preserve">
-    <value>ZZ (dec)</value>
+  <data name="Sell" xml:space="preserve">
+    <value>E-Sell</value>
+  </data>
+  <data name="SpaceShipSClassUpgradeModules" xml:space="preserve">
+    <value>SpaceShip S-Class Upgrade Modules</value>
+  </data>
+  <data name="SpaceStationNotes" xml:space="preserve">
+    <value>Space Station Notes</value>
+  </data>
+  <data name="SpaceStationTradeItems" xml:space="preserve">
+    <value>Space Station Trade Item</value>
+  </data>
+  <data name="SpecialInterest" xml:space="preserve">
+    <value>Special Interest</value>
+  </data>
+  <data name="StarCategory" xml:space="preserve">
+    <value>Category</value>
+  </data>
+  <data name="StarCount" xml:space="preserve">
+    <value>Multiple stars?</value>
+  </data>
+  <data name="StarshipsTextNotes" xml:space="preserve">
+    <value>Starships Text Notes</value>
+  </data>
+  <data name="SummaryAdditions" xml:space="preserve">
+    <value>Summary Additions</value>
+  </data>
+  <data name="SurveyDate" xml:space="preserve">
+    <value>Survey Date</value>
+  </data>
+  <data name="SurveyorName" xml:space="preserve">
+    <value>Source/Surveyor Name</value>
+  </data>
+  <data name="SystemMisc" xml:space="preserve">
+    <value>System Misc</value>
+  </data>
+  <data name="SystemNameAllPlatforms" xml:space="preserve">
+    <value>System Name (All platforms)</value>
+  </data>
+  <data name="VideoLink" xml:space="preserve">
+    <value>Video Link</value>
+  </data>
+  <data name="WealthType" xml:space="preserve">
+    <value>Wealth</value>
+  </data>
+  <data name="XCoordDec" xml:space="preserve">
+    <value>X coord DEC</value>
+  </data>
+  <data name="YCoordDec" xml:space="preserve">
+    <value>Y coord DEC</value>
+  </data>
+  <data name="ZCoordDec" xml:space="preserve">
+    <value>Z coord DEC</value>
   </data>
 </root>
