--- a/AGT.GalacticArchives.Globalization/BiomeResource.resx
+++ b/AGT.GalacticArchives.Globalization/BiomeResource.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -120,7 +120,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CommunityExpedition" xml:space="preserve">
-      <value>Community Expedition</value>
+  <data name="BiomeName" xml:space="preserve">
+      <value>Biome Name</value>
   </data>
 </root>
