--- a/AGT.GalacticArchives.Globalization/EdiblePlantResource.resx
+++ b/AGT.GalacticArchives.Globalization/EdiblePlantResource.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -120,7 +120,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CommunityExpedition" xml:space="preserve">
-      <value>Community Expedition</value>
+  <data name="AloeFlesh" xml:space="preserve">
+      <value>Aloe Flesh</value>
+  </data>
+  <data name="FrozenTubers" xml:space="preserve">
+      <value>Frozen Tubers</value>
+  </data>
+  <data name="ImpulseBeans" xml:space="preserve">
+      <value>Impulse Beans</value>
+  </data>
+  <data name="JadePeas" xml:space="preserve">
+      <value>Jade Peas</value>
   </data>
 </root>
