Setup Planet Submission

--- a/AGT.GalacticArchives.Globalization/AtmosphereGasTypeResource.resx
+++ b/AGT.GalacticArchives.Globalization/AtmosphereGasTypeResource.resx
@@ -126,199 +126,8 @@
             PublicKeyToken=b77a5c561934e089
         </value>
     </resheader>
-    <data name="ActivatedCadmium" xml:space="preserve">
-        <value>Activated Cadmium</value>
-      </data>
-    <data name="ActivatedCopper" xml:space="preserve">
-        <value>Activated Copper</value>
-      </data>
-    <data name="ActivatedEmeril" xml:space="preserve">
-        <value>Activated Emeril</value>
-      </data>
-    <data name="ActivatedIndium" xml:space="preserve">
-        <value>Activated Indium</value>
-      </data>
-    <data name="ActivatedQuartzite" xml:space="preserve">
-        <value>Activated Quartzite</value>
-      </data>
-    <data name="Aluminium" xml:space="preserve">
-        <value>Aluminium</value>
-      </data>
-    <data name="Ammonia" xml:space="preserve">
-        <value>Ammonia</value>
-      </data>
-    <data name="Basalt" xml:space="preserve">
-        <value>Basalt</value>
-      </data>
-    <data name="CactusFlesh" xml:space="preserve">
-        <value>Cactus Flesh</value>
-      </data>
-    <data name="Cadmium" xml:space="preserve">
-        <value>Cadmium</value>
-      </data>
-    <data name="Carbon" xml:space="preserve">
-        <value>Carbon</value>
-      </data>
-    <data name="Chlorine" xml:space="preserve">
-        <value>Chlorine</value>
-      </data>
-    <data name="ChromaticMetal" xml:space="preserve">
-        <value>Chromatic Metal</value>
-      </data>
-    <data name="Cobalt" xml:space="preserve">
-        <value>Cobalt</value>
-      </data>
-    <data name="CondensedCarbon" xml:space="preserve">
-        <value>Condensed Carbon</value>
-      </data>
-    <data name="Copper" xml:space="preserve">
-        <value>Copper</value>
-      </data>
-    <data name="CrystallisedHelium" xml:space="preserve">
-        <value>Crystallised Helium</value>
-      </data>
-    <data name="CursedDust" xml:space="preserve">
-        <value>Cursed Dust</value>
-      </data>
-    <data name="CytoPhosphate" xml:space="preserve">
-        <value>Cyto-Phosphate</value>
-      </data>
-    <data name="Deuterium" xml:space="preserve">
-        <value>Deuterium</value>
-      </data>
-    <data name="Dihydrogen" xml:space="preserve">
-        <value>Di-hydrogen</value>
-      </data>
-    <data name="Dioxite" xml:space="preserve">
-        <value>Dioxite</value>
-      </data>
-    <data name="Emeril" xml:space="preserve">
-        <value>Emeril</value>
-      </data>
-    <data name="Faecium" xml:space="preserve">
-        <value>Faecium</value>
-      </data>
-    <data name="FerriteDust" xml:space="preserve">
-        <value>Ferrite Dust</value>
-      </data>
-    <data name="FrostCrystal" xml:space="preserve">
-        <value>Frost Crystal</value>
-      </data>
-    <data name="FungalMould" xml:space="preserve">
-        <value>Fungal Mould</value>
-      </data>
-    <data name="GammaRoot" xml:space="preserve">
-        <value>Gamma Root</value>
-      </data>
-    <data name="Gold" xml:space="preserve">
-        <value>Gold</value>
-      </data>
-    <data name="Heridium" xml:space="preserve">
-        <value>Heridium</value>
-      </data>
-    <data name="Hexite" xml:space="preserve">
-        <value>Hexite</value>
-      </data>
-    <data name="Indium" xml:space="preserve">
-        <value>Indium</value>
-      </data>
-    <data name="IonisedCobalt" xml:space="preserve">
-        <value>Ionised Cobalt</value>
-      </data>
-    <data name="Iridium" xml:space="preserve">
-        <value>Iridium</value>
-      </data>
-    <data name="KelpSac" xml:space="preserve">
-        <value>Kelp Sac</value>
-      </data>
-    <data name="Lithium" xml:space="preserve">
-        <value>Lithium</value>
-      </data>
-    <data name="LivingSlime" xml:space="preserve">
-        <value>Living Slime</value>
-      </data>
-    <data name="MagnetisedFerrite" xml:space="preserve">
-        <value>Magnetised Ferrite</value>
-      </data>
-    <data name="MarrowBulb" xml:space="preserve">
-        <value>Marrow Bulb</value>
-      </data>
-    <data name="Mordite" xml:space="preserve">
-        <value>Mordite</value>
-      </data>
-    <data name="Nickel" xml:space="preserve">
-        <value>Nickel</value>
-      </data>
-    <data name="Nitrogen" xml:space="preserve">
-        <value>Nitrogen</value>
-      </data>
-    <data name="Oxygen" xml:space="preserve">
-        <value>Oxygen</value>
-      </data>
-    <data name="Paraffinium" xml:space="preserve">
-        <value>Paraffinium</value>
-      </data>
-    <data name="Phosphorus" xml:space="preserve">
-        <value>Phosphorus</value>
-      </data>
-    <data name="Platinum" xml:space="preserve">
-        <value>Platinum</value>
-      </data>
-    <data name="Pugneum" xml:space="preserve">
-        <value>Pugneum</value>
-      </data>
-    <data name="PureFerrite" xml:space="preserve">
-        <value>Pure Ferrite</value>
-      </data>
-    <data name="Pyrite" xml:space="preserve">
-        <value>Pyrite</value>
-      </data>
-    <data name="Quartzite" xml:space="preserve">
-        <value>Quartzite</value>
-      </data>
-    <data name="Radon" xml:space="preserve">
-        <value>Radon</value>
-      </data>
-    <data name="ResidualGoop" xml:space="preserve">
-        <value>Residual Goop</value>
-      </data>
-    <data name="RunawayMould" xml:space="preserve">
-        <value>Runaway Mould</value>
-      </data>
-    <data name="RustedMetal" xml:space="preserve">
-        <value>Rusted Metal</value>
-      </data>
-    <data name="Salt" xml:space="preserve">
-        <value>Salt</value>
-      </data>
-    <data name="SilicatePowder" xml:space="preserve">
-        <value>Silicate Powder</value>
-      </data>
-    <data name="Silver" xml:space="preserve">
-        <value>Silver</value>
-      </data>
-    <data name="Sodium" xml:space="preserve">
-        <value>Sodium</value>
-      </data>
-    <data name="SodiumNitrate" xml:space="preserve">
-        <value>Sodium Nitrate</value>
-      </data>
-    <data name="Solanium" xml:space="preserve">
-        <value>Solanium</value>
-      </data>
-    <data name="StarBulb" xml:space="preserve">
-        <value>Star Bulb</value>
-      </data>
-    <data name="Sulphurine" xml:space="preserve">
-        <value>Sulphurine</value>
-      </data>
-    <data name="Tritium" xml:space="preserve">
-        <value>Tritium</value>
-      </data>
-    <data name="Uranium" xml:space="preserve">
-        <value>Uranium</value>
-      </data>
-    <data name="ViscousFluids" xml:space="preserve">
-        <value>Viscous Fluids</value>
-      </data>
+    <data name="CarbonDioxide" xml:space="preserve"><value>Carbon Dioxide</value></data>
+    <data name="CarbonMonoxide" xml:space="preserve"><value>Carbon Monoxide</value></data>
+    <data name="NotPresent" xml:space="preserve"><value>Not Present</value></data>
+
 </root>
