--- a/AGT.GalacticArchives.Globalization/BiomeSubTypeResource.resx
+++ b/AGT.GalacticArchives.Globalization/BiomeSubTypeResource.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -120,13 +120,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BiomeEdiblePlants" xml:space="preserve">
-      <value>Biome Edible Plants</value>
+  <data name="TheNest" xml:space="preserve">
+    <value>The Nest</value>
   </data>
-  <data name="BiomeName" xml:space="preserve">
-      <value>Biome Name</value>
+  <data name="TheReliquary" xml:space="preserve">
+    <value>The Reliquary</value>
   </data>
-  <data name="BiomeType" xml:space="preserve">
-      <value>Biome Type</value>
+  <data name="ToxicAnomaly" xml:space="preserve">
+    <value>Toxic Anomaly</value>
+  </data>
+  <data name="ToxicHorror" xml:space="preserve">
+    <value>Toxic Horror</value>
+  </data>
+  <data name="UltramarineGiant" xml:space="preserve">
+    <value>Ultramarine Giant</value>
+  </data>
+  <data name="VermillionGlobe" xml:space="preserve">
+    <value>Vermillion Globe</value>
+  </data>
+  <data name="VileAnomaly" xml:space="preserve">
+    <value>Vile Anomaly</value>
+  </data>
+  <data name="WindSwept" xml:space="preserve">
+    <value>Wind-Swept</value>
+  </data>
+  <data name="WineDark" xml:space="preserve">
+    <value>Wine Dark</value>
+  </data>
+  <data name="WormRidden" xml:space="preserve">
+    <value>Worm-Ridden</value>
+  </data>
+  <data name="XenoColony" xml:space="preserve">
+    <value>Xeno-Colony</value>
   </data>
 </root>
