--- a/AGT.GalacticArchives.Globalization/BiomeTypeResource.resx
+++ b/AGT.GalacticArchives.Globalization/BiomeTypeResource.resx
@@ -120,10 +120,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GasGiant" xml:space="preserve">
-      <value>Gas Giant</value>
-  </data>
-  <data name="MegaExotic" xml:space="preserve">
-      <value>Mega Exotic</value>
-  </data>
+  <data name="GasGiant" xml:space="preserve"><value>Gas Giant</value></data>
+  <data name="MegaExotic" xml:space="preserve"><value>Mega Exotic</value></data>
 </root>
