--- a/AGT.GalacticArchives.Globalization/PlanetPropertyTypeResource.resx
+++ b/AGT.GalacticArchives.Globalization/PlanetPropertyTypeResource.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -120,13 +120,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BiomeEdiblePlants" xml:space="preserve">
-      <value>Biome Edible Plants</value>
+  <data name="AncientBones" xml:space="preserve">
+      <value>Ancient Bones</value>
   </data>
-  <data name="BiomeName" xml:space="preserve">
-      <value>Biome Name</value>
+  <data name="SalvageableScrap" xml:space="preserve">
+      <value>Salvageable Scrap</value>
   </data>
-  <data name="BiomeType" xml:space="preserve">
-      <value>Biome Type</value>
+  <data name="VileBrood" xml:space="preserve">
+      <value>Vile Brood</value>
   </data>
 </root>
