Refactored Database Models

--- a/AGT.GalacticArchives.Globalization/MaterialsResourceType.resx
+++ b/AGT.GalacticArchives.Globalization/MaterialsResourceType.resx
@@ -240,4 +240,7 @@
     <data name="ViscousFluids" xml:space="preserve">
         <value>Viscous Fluids</value>
       </data>
+    <data name="VortexCube" xml:space="preserve">
+        <value>Vortex Cube</value>
+      </data>
 </root>
